--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
    --font-family: Roboto,serif;
    --secondary-bg-color:  #2F303A;
    --mainer-bg-color: #E5E5E5;
+}
+ul {
+    padding-left: 0;
 } 
 body {
     margin: 0;
@@ -16,35 +19,91 @@ body {
          background-color: var(--mainer-bg-color)
      } 
      .container {
-         margin-top: auto;
-         margin-left: auto;
-         width: 1170px;
+        width: 1210px;
+        margin-right: auto;
+        margin-left: auto;
+    
 
      }
-     .footer-end {
-         background-color: var(--secondary-bg-color);
+     .logo {
+         padding-top: 32px;
+         padding-bottom: 11px;
      }
-     a[href^="tel"] {
+     .main-div { 
+         display: flex;
+         align-items: center;
+     }
+     .nav-header {
+         align-items: center;
+         display: flex;
+     }
+     .section-auth {
+        list-style-type: none;
+         margin-left: 239px;
+         display: flex;
+     }
+     .section-auth .button-main:not(:last-child) {
+        list-style-type: none;
+         margin-right: 8px;
+     }
+     .site-nav { 
+        list-style-type: none;
+         margin-left: 93px;
+        display: flex;
+     }
+     .site-nav .iteam-header:not(:last-child) {
+        list-style-type: none;
+        margin-right: 50px;
+     }
+     .auth-nav {
+        list-style-type: none;
+        display: flex;
+        margin-left: auto;
+     }
+     .auth-nav .iteam-header+ .iteam-header {
+        margin-left: 50px;
+     }
+     .images-conteiner {
         
+        list-style-type: none;
+         display: flex;
+         flex-wrap: wrap;
+         
+     } 
+     .flex-element {
+        width: calc((100% - 30px * 2) / 3);
+        margin-right: 30px;
+        margin-bottom: 30px;
+        
+     }
+     .flex-element:nth-child(3n) {
+        margin-right: 0;
+     }
+     .flex-element:nth-last-child(-n+3) {
+         margin-bottom: 0;
+     }
+
+    
+    
+     
+     .link-tel {
+
         text-decoration: none;
         font-family: Roboto,serif;
         font-style: normal;
-        font-weight: 500;
+        font-weight: 700;
         font-size: 14px;
         line-height: 16px; 
         color: var(--gray) 
      }
 
+
      .link-mail {
-        width: 231px;
-        height: 21px;
-        left: 215px;
-        top: 2238px;
-        
+
         text-decoration: none;
         font-family: Roboto,serif;
         font-style: normal;
-        font-weight: 500;
+        font-weight: 600;
         font-size: 14px;
         line-height: 16px;
         color: var(--active);
@@ -55,45 +114,20 @@ body {
      }
 
      .link {
-        width: 270px;
-        height: 16px;
-        left: 515px;
-        top: 774px;
+        display: block; 
+         padding-top: 32px;
+         padding-bottom: 11px;
         
          text-decoration: none;
         font-family: Roboto,serif;
-        font-style: normal;
-        font-weight: 500;
+        font-style: 400;
+        font-weight: 700;
         font-size: 14px;
         line-height: 16px;
         color: var(--black);
      }
      .link-active:hover{
          color: var(--active);
-     }
-     .link-active {
-         text-decoration: none;
-         font-family: Raleway,serif;
-         font-style: normal;
-         font-weight: 700;
-         font-size: 26px;
-         line-height: 31px;
-         color: var(--active);
-     }
-     .link-active:focus {
-         text-decoration: none;
-     }
-     .link-active-studio {
-        text-decoration: none;
-        font-family: Raleway,serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 31px;
-        color: var(--black);
-     }
-     .link-active-studio:focus {
-         text-decoration: none;
      }
      .list {
          padding: 0;
@@ -103,31 +137,40 @@ body {
      .section-service { 
          margin-bottom: 94px;
          text-align: center;
-        background: #2F303A;
+        background: var(--secondary-bg-color);
      }
      h1 {
-         display: inline-block;
+        text-align: center;
+        display: inline-block;
          margin-top: 0;
          margin-bottom: 40px;
          width: 696px;
-height: 120px;
-left: 452px;
-top: 280px;
-        font-family: Roboto,serif;
+          height: 120px;
+          left: 452px;
+           top: 280px;
+        font-family: Roboto,sans-serif;
         font-style: normal;
-        font-weight: 900;
+        font-weight: 700;
         font-size: 44px;
         line-height: 1.3;        
         color: var(--white-2);
      }
      .link-active-styles {
+        display: inline-block;
+        border: 1px solid transparent; 
+        border-radius: 6px;
+         padding-top: 32px;
+         padding-bottom: 11px;
          text-decoration: none;
-        font-family: Roboto,serif;
+         text-align: center;
+
+        font-family: Roboto,sans-serif;
         font-style: normal;
-        font-weight: 500;
+        font-weight: 700;
         font-size: 14px;
         line-height: 16px;
         letter-spacing: 0.02em;
+
          color: var(--active);
      }
      .link-active-styles:hover {
@@ -159,13 +202,34 @@ top: 280px;
          color: blue;
 
      }
+     .feature-list {
+        display: flex;
+         flex-wrap: wrap;
+        list-style-type: none;
+     }
+     .feature-list .iteam {
+        width: 270px;
+        margin-right: 30px;
+     }
+     .feature-list .iteam:last-child {
+         margin: 0;
+     }   
+     
+     .feature-list .link-title {
+        width: 270px;
+        height: 75px;
+        left: 215px;
+        top: 800px;
+        padding-top: 10px;
+        
+     }
      .link-active-button{
          display: inline-block;
          padding: 6px 22px;
          border: 1px solid transparent;
          min-width: 73px;
 
-        font-family: Roboto,serif;
+        font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
@@ -182,9 +246,10 @@ top: 280px;
          padding: 6px 22px;
          border: 1px solid transparent;
 
-        font-family: Roboto,serif;
+        font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 500;
+
         font-size: 16px;
         line-height: 1.6;
         text-align: center;
@@ -192,12 +257,12 @@ top: 280px;
         color: var(--black);
      } 
      .link-title {
-        width: 270px;
-        height: 75px;
-         left: 515px;
-         top: 800px;
-        font-family: Roboto,serif;
-        font-style: normal;
+         /* margin-bottom: 20px; */
+         /* margin-left: 24px; */
+         width: 100%;
+         height: 19px;
+        font-family: Roboto,sans-serif;
+        font-style: 400;
         font-weight: 400;
         font-size: 14px;
         line-height: 1.7;
@@ -205,43 +270,83 @@ top: 280px;
         color: var(--gray);
      }
      h2 { 
-         display: inline-block;
+         
          text-align: center;
-        font-family: Roboto,serif;
-        font-style: normal;
+         margin-top: 94px;
+         margin-bottom: 40px;
+
+        font-family: Roboto,sans-serif;
+        font-style: 400;
         font-weight: 700;
         font-size: 36px;
         line-height: 42px;
-        text-align: center;
+        
         letter-spacing: 0.03em;
          color: var(--black);
      }
+     .engaged-section {
+        list-style-type: none;
+        display: flex;
+       
+     }
+     .iteam-section {
+         margin-right: 30px;
+        width: calc((100%-30px*2) / 3);
+        
+
+     }
+     .iteam-section:nth-child(4n) {
+        margin-right: 0;
+    }
+    .team-section {
+        flex-wrap: wrap;
+        list-style-type: none;
+        display: flex;
+        
+    }
+    .img-team {
+        width: calc((100%-60) / 4);
+        margin-right: 30px;
+    }
+    .iteam-section:nth-child(4n) {
+        margin-right: 0;
+    }
+
      .iteam {
          padding-top: 50px;
          padding-bottom: 94px;
      }
     .link-title-desinger {
-        width: 130px;
-      height: 19px;
-       left: 285px;
-       top: 1954px;
-        font-family: Roboto,serif;
+       
+       
+       margin-top: 30px;
+       margin-left: 68px;
+        margin-right: 68px;
+        margin-bottom: 10px;
+
+        font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
         line-height: 19px;
-        text-align: center;
+       
         letter-spacing: 0.03em;
         color: var(--black);
     }
     .link-title-product {
         width: 151px;
-       height: 19px;
-           left: 275px;
-          top: 1925px;
+        height: 19px;
+        left: 275px;
+        top: 1925px;
+ 
+          
+          margin-top: 30px;
+          margin-left: 60px;
+          margin-right: 59px;
+          
 
-        font-family: Roboto,serif;
-        font-style: normal;
+        font-family: Roboto,sans-serif;
+        font-style: 400;
         font-weight: 500;
         font-size: 16px;
         line-height: 19px;
@@ -253,12 +358,15 @@ top: 280px;
          height: 19px;
          left: 882px;
          top: 1925px;
-        font-family: Roboto,serif;
+         margin-top: 30px;
+         margin-left: 66px;
+          margin-right: 67px;
+          margin-bottom: 10px;
+        font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
         line-height: 19px;
-        /* identical to box height */
         text-align: center;
         letter-spacing: 0.03em;
         color: var(--black);
@@ -268,8 +376,11 @@ top: 280px;
        height: 19px;
         left: 596px;
          top: 1925px;
-
-        font-family: Roboto,serif;
+         margin-top: 30px;
+         margin-left: 81px;
+          margin-right: 80px;
+          margin-bottom: 10px;
+        font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
@@ -279,20 +390,68 @@ top: 280px;
         color: var(--black);
     }
    h3 { 
-       margin-top: 0;
-     margin-bottom: 10px;  
-    font-family: Roboto,serif;
-    font-style: normal;
+    width: 322px;
+    font-family: Roboto,sans-serif;
     font-weight: 700;;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    color: var(--black);
    }
+   .img-team .link-title-mark {
+       margin-left: 97px;
+       margin-right: 97px;
+       margin-bottom: 30px;
+       color: var(--gray);
+
+   }
+   .img-team .link-title-fron {
+       margin-left: 62px;
+       margin-right: 61px;
+       margin-bottom: 30px;
+       width: 147px;
+       height: 19px;
+       left: 577px;
+       top: 1954px;
+       color: var(--gray);
+   }
+   .img-team .link-title-des {
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-bottom: 30px;
+    width: 130px;
+   height: 19px;
+   left: 285px;
+   top: 1954px;
+   color: var(--gray);
+   }
+   .img-team .link-title-ui {
+    margin-left: 92px;
+    margin-right: 91px;
+    margin-bottom: 30px;
+    width: 87px;
+height: 19px;
+left: 1207px;
+top: 1954px;
+    color: var(--gray);
+
+   }
+
    .section-contentc { 
        padding-top: 94px;
        padding-bottom: 94px;
        background-color:  #F5F4FA;
    }
    .footer-contentc {
-       background-color: #2F303A;
+       background-color: var(--secondary-bg-color)
    }
+   .addres {
+       display: inline-block;
+   }
+   .siti {
+       display: inline-block;
+       color: var(--white-2);
+       padding-top: 20px;
+   }
+       
+   
