--- a/css/styles.css
+++ b/css/styles.css
@@ -306,9 +306,8 @@ body {
     }
     .img-team {
         width: calc((100%-60) / 4);
-        margin-right: 30px;
     }
-    .iteam-section:nth-child(4n) {
+    .iteam-section .img-team:not(:last-child) {
         margin-right: 0;
     }
 
@@ -318,10 +317,9 @@ body {
      }
     .link-title-desinger {
        
-       
        margin-top: 30px;
        margin-left: 68px;
-        margin-right: 68px;
+       margin-right: 68px;
         margin-bottom: 10px;
 
         font-family: Roboto,sans-serif;
@@ -430,9 +428,8 @@ body {
     margin-right: 91px;
     margin-bottom: 30px;
     width: 87px;
-height: 19px;
 left: 1207px;
-top: 1954px;
+top: 1954px; 
     color: var(--gray);
 
    }
@@ -453,5 +450,3 @@ top: 1954px;
        color: var(--white-2);
        padding-top: 20px;
    }
-       
-   
