--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ body {
      } 
      .container {
         width: 1210px;
+        padding-left: 20px;
+        padding-right: 20px;
         margin-right: auto;
         margin-left: auto;
     
@@ -134,20 +136,25 @@ body {
          margin: 0;
          list-style: none;
      }
-     .section-service { 
-         margin-bottom: 94px;
+
+     .section-service {
+        width: 1210px;
+        height: 600px;
+        margin-right: auto;
+        margin-left: auto;
          text-align: center;
         background: var(--secondary-bg-color);
      }
+     .section-biss {
+         padding-top: 30px;
+     }
      h1 {
+         padding-top: 200px;
         text-align: center;
         display: inline-block;
          margin-top: 0;
          margin-bottom: 40px;
          width: 696px;
-          height: 120px;
-          left: 452px;
-           top: 280px;
         font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 700;
@@ -223,7 +230,15 @@ body {
         padding-top: 10px;
         
      }
-     .link-active-button{
+     .all {
+         text-decoration: none;
+         color: var(--white-2);
+     }
+     .all:hover {
+         color: var(--white-2)
+     }
+     
+     .link-active-button {
          display: inline-block;
          padding: 6px 22px;
          border: 1px solid transparent;
@@ -241,7 +256,7 @@ body {
          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
          border-radius: 4px;
      }
-     .button{
+     .button {
          display: inline-block;
          padding: 6px 22px;
          border: 1px solid transparent;
