--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,24 @@ body {
 
      }
      .logo {
-         padding-top: 32px;
-         padding-bottom: 11px;
-     }
+        text-decoration: none;
+        font-family: Raleway,sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.19;
+        color: var(--active);
+    }
+    .logotip {
+        text-decoration: none;
+        font-family: Raleway,sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.19;
+        color: var(--black);
+    }
+     
      .main-div { 
          display: flex;
          align-items: center;
@@ -89,31 +104,32 @@ body {
     
      
      .link-tel {
-
         text-decoration: none;
-        font-family: Roboto,serif;
+        font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 700;
         font-size: 14px;
         line-height: 16px; 
         color: var(--gray) 
      }
-
+     .link-tel:hover {
+         color: var(--active);
+     }
 
      .link-mail {
-
         text-decoration: none;
-        font-family: Roboto,serif;
+        font-family: Roboto,sans-serif;
         font-style: normal;
         font-weight: 600;
         font-size: 14px;
         line-height: 16px;
-        color: var(--active);
+        color: var(--gray);
      }
      .link-mail:hover {
-         color: blue;
-        text-decoration: underline;
+        color: var(--active);
+      
      }
+
 
      .link {
         display: block; 
@@ -163,27 +179,42 @@ body {
         color: var(--white-2);
      }
      .link-active-styles {
-        display: inline-block;
-        border: 1px solid transparent; 
-        border-radius: 6px;
-         padding-top: 32px;
-         padding-bottom: 11px;
-         text-decoration: none;
-         text-align: center;
-
         font-family: Roboto,sans-serif;
         font-style: normal;
-        font-weight: 700;
+        font-weight: 500;
         font-size: 14px;
         line-height: 16px;
-        letter-spacing: 0.02em;
-
-         color: var(--active);
+        text-decoration: none;
+        color: var(--black);
      }
      .link-active-styles:hover {
-         text-decoration: underline;
-         color: blue;
+         color: var(--active);
      }
+     .link-active:hover{
+         color: var(--active);
+     }
+     .link-active {
+         text-decoration: none;
+         font-family: Raleway,sans-serif;
+         font-style: normal;
+         font-weight: 700;
+         font-size: 26px;
+         line-height: 31px;
+         color: var(--active);
+     }
+     .link-active:focus {
+         text-decoration: none;
+     }
+     .link-active-studio {
+        text-decoration: none;
+        font-family: Raleway,sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 31px;
+        color: var(--black);
+     }
+     
      .link-active-service { 
          display: inline-block;        
          padding: 10px 32px;
@@ -204,11 +235,8 @@ body {
         color: var(--white-2);
 
      }
-     .link-active-service:hover {
-         text-decoration: underline;
-         color: blue;
 
-     }
+     
      .feature-list {
         display: flex;
          flex-wrap: wrap;
@@ -230,13 +258,7 @@ body {
         padding-top: 10px;
         
      }
-     .all {
-         text-decoration: none;
-         color: var(--white-2);
-     }
-     .all:hover {
-         color: var(--white-2)
-     }
+
      
      .link-active-button {
          display: inline-block;
@@ -244,33 +266,47 @@ body {
          border: 1px solid transparent;
          min-width: 73px;
 
-        font-family: Roboto,sans-serif;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 26px;
-        text-align: center;
-
-         letter-spacing: 0.03em;
-         background: var(--active); 
-         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-         border-radius: 4px;
-     }
-     .button {
+         font-family: Roboto,sans-serif;
+         font-style: normal;
+         font-weight: 500;
+         font-size: 16px;
+         line-height: 26px;
+         text-align: center;
+          letter-spacing: 0.03em;
+          color: var(--black);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          border-radius: 4px;
+      }
+          
+      .link-active-button:hover {
+            background-color: var(--active);
+            color: var(--white-2);
+      }
+ 
+ 
+     
+     .btn {
          display: inline-block;
          padding: 6px 22px;
          border: 1px solid transparent;
 
-        font-family: Roboto,sans-serif;
-        font-style: normal;
-        font-weight: 500;
-
-        font-size: 16px;
-        line-height: 1.6;
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: var(--black);
-     } 
+         font-family: Roboto,sans-serif;
+         font-style: normal;
+         font-weight: 500;
+         font-size: 16px;
+         line-height: 26px;
+       
+         
+         text-align: center;
+         letter-spacing: 0.03em;
+         color: var(--black);
+         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+         border-radius: 4px;
+      }
+      .btn:hover {
+         background-color: var(--active);
+            color: var(--white-2);
+      }
      .link-title {
          /* margin-bottom: 20px; */
          /* margin-left: 24px; */
