--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
       .logo {
          text-decoration: none;
          font-family: Raleway,sans-serif;
-         font-style: normal;
+        
          font-weight: 700;
          font-size: 26px;
          line-height: 1.19;
@@ -40,7 +40,7 @@
      .logotip {
          text-decoration: none;
          font-family: Raleway,sans-serif;
-         font-style: normal;
+        
          font-weight: 700;
          font-size: 26px;
          line-height: 1.19;
@@ -106,9 +106,8 @@
       
       .link-tel {
          text-decoration: none;
-         font-family: Roboto,sans-serif;
-         font-style: normal;
-         font-weight: 700;
+        
+         font-weight: 500;
          font-size: 14px;
          line-height: 16px; 
          color: var(--gray) 
@@ -119,9 +118,8 @@
  
       .link-mail {
          text-decoration: none;
-         font-family: Roboto,sans-serif;
-         font-style: normal;
-         font-weight: 600;
+        
+         font-weight: 500;
          font-size: 14px;
          line-height: 16px;
          color: var(--gray);
@@ -137,8 +135,7 @@
           padding-top: 32px;
           padding-bottom: 11px;
          
-          text-decoration: none;
-         font-family: Roboto,serif;
+        
          font-style: 400;
          font-weight: 700;
          font-size: 14px;
@@ -175,16 +172,15 @@
           margin-top: 0;
           margin-bottom: 40px;
           width: 696px;
-         font-family: Roboto,sans-serif;
-         font-style: normal;
+       
          font-weight: 700;
          font-size: 44px;
          line-height: 1.3;        
          color: var(--white-2);
       }
       .link-active-styles {
-         font-family: Roboto,sans-serif;
-         font-style: normal;
+       
+        
          font-weight: 500;
          font-size: 14px;
          line-height: 16px;
@@ -199,7 +195,7 @@
       }
       .link-active {
           text-decoration: none;
-          font-family: Raleway,sans-serif;
+         
           font-style: normal;
           font-weight: 700;
           font-size: 26px;
@@ -211,8 +207,7 @@
       }
       .link-active-studio {
          text-decoration: none;
-         font-family: Raleway,sans-serif;
-         font-style: normal;
+        
          font-weight: 700;
          font-size: 26px;
          line-height: 31px;
@@ -227,8 +222,7 @@
           min-width: 136px;
           width: 200px;
  
-         font-family: Roboto,serif;
-         font-style: normal;
+        
          font-weight: 700;
          font-size: 16px;
          line-height: 1.8;
@@ -270,11 +264,11 @@
           border: 1px solid transparent;
           min-width: 73px;
  
-          font-family: Roboto,sans-serif;
-          font-style: normal;
+    
+          
           font-weight: 500;
           font-size: 16px;
-          line-height: 26px;
+          line-height: 1.6;
           text-align: center;
            letter-spacing: 0.03em;
            color: var(--black);
@@ -294,11 +288,10 @@
           padding: 6px 22px;
           border: 1px solid transparent;
  
-          font-family: Roboto,sans-serif;
-          font-style: normal;
+        
           font-weight: 500;
           font-size: 16px;
-          line-height: 26px;
+          line-height: 1.6;
         
           
           text-align: center;
@@ -312,12 +305,10 @@
              color: var(--white-2);
        }
       .link-title {
-          /* margin-bottom: 20px; */
-          /* margin-left: 24px; */
+         
           width: 100%;
           height: 19px;
-         font-family: Roboto,sans-serif;
-         font-style: 400;
+        
          font-weight: 400;
          font-size: 14px;
          line-height: 1.7;
@@ -330,11 +321,10 @@
           margin-top: 94px;
           margin-bottom: 40px;
  
-         font-family: Roboto,sans-serif;
-         font-style: 400;
+       
          font-weight: 700;
          font-size: 36px;
-         line-height: 42px;
+         line-height: 1.16;
          
          letter-spacing: 0.03em;
           color: var(--black);
@@ -375,9 +365,9 @@
         margin-top: 30px;
         margin-left: 68px;
         margin-right: 68px;
-         margin-bottom: 10px;
+       
  
-         font-family: Roboto,sans-serif;
+       
          
        
          font-size: 16px;
@@ -391,7 +381,7 @@
          margin-left: 60px;
          margin-right: 59px;
           
-          font-family: Roboto,sans-serif;
+      
  
         
           font-size: 16px;
@@ -406,9 +396,9 @@
           margin-left: 66px;
            margin-right: 67px;
           
-         font-family: Roboto,sans-serif;
+     
       
-         font-weight: 500;
+     
          font-size: 16px;
          line-height: 1.18;
       
@@ -421,9 +411,9 @@
           margin-left: 81px;
            margin-right: 80px;
          
-         font-family: Roboto,sans-serif;
-         font-style: normal;
-         font-weight: 500;
+        
+
+         font-weight: 700;
          font-size: 16px;
          line-height: 1.18;
         
@@ -431,8 +421,8 @@
          color: var(--black);
      }
     h3 { 
-     width: 322px;
-     font-family: Roboto,sans-serif;
+    
+     
      font-weight: 700;;
      font-size: 18px;
      line-height: 2;
@@ -487,12 +477,13 @@
      list-style: none;
  }
     .siti {
-        display: inline-block;
+        /* display: inline-block; */
      
        
         color: var(--white-2);
+        font-style: normal;
        
-        
+        font-weight: 400;
         font-family: Roboto,sans-serif;
         font-size: 14px;
         line-height: 1.71;
