--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@
  ul {
      padding-left: 0;
  } 
+ .link-title-ui {
+     margin: 0;
+ }
  body {
      font-family: Roboto,sans-serif;
      margin: 0;
@@ -57,6 +60,8 @@
       }
       .section-auth {
          list-style-type: none;
+          margin-top: 100px;
+          margin-bottom: 56px;
           margin-left: 239px;
           display: flex;
       }
@@ -86,6 +91,7 @@
          list-style-type: none;
           display: flex;
           flex-wrap: wrap;
+          margin-bottom: 114px;
           
       } 
       .flex-element {
@@ -338,6 +344,7 @@
           margin-right: 30px;
          width: calc((100%-30px*2) / 3);
          
+         
  
       }
       .iteam-section:nth-child(4n) {
@@ -351,7 +358,17 @@
      }
      .img-team {
          width: calc((100%-60) / 4);
+         
      }
+     .img-team-iteam {
+        background: var(--white-2);
+ 
+         width: 270px;
+         height: 428px;
+         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+         border-radius: 0px 0px 4px 4px;
+     }
+     
      .iteam-section .img-team:not(:last-child) {
          margin-right: 0;
      }
@@ -362,10 +379,8 @@
       }
      .link-title-desinger {
         
-        margin-top: 30px;
-        margin-left: 68px;
-        margin-right: 68px;
-       
+      padding-top: 30px;
+      text-align: center;
  
        
          
@@ -377,10 +392,8 @@
          color: var(--black);
      }
      .link-title-product {
-         margin-top: 30px;
-         margin-left: 60px;
-         margin-right: 59px;
-          
+        padding-top: 30px;
+        text-align: center;
       
  
         
@@ -392,10 +405,8 @@
      }
      .link-title-marketing {
         
-          margin-top: 30px;
-          margin-left: 66px;
-           margin-right: 67px;
-          
+        padding-top: 30px;
+      text-align: center;
      
       
      
@@ -407,12 +418,12 @@
      }
      .link-title-developer {
         
-          margin-top: 30px;
-          margin-left: 81px;
-           margin-right: 80px;
+         padding-top: 30px;
+        
+         
          
         
-
+         text-align: center;
          font-weight: 700;
          font-size: 16px;
          line-height: 1.18;
@@ -451,9 +462,9 @@
     color: var(--gray);
     }
      .link-title-ui {
-     margin-left: 92px;
-     margin-right: 91px;
-     margin-bottom: 30px;
+       margin-bottom: 30px;
+      text-align: center;
+    
    
      color: var(--gray);
  
@@ -467,15 +478,15 @@
     .footer-contentc {
         background-color: var(--secondary-bg-color)
     }
-    .addres {
-        display: inline-block;
-    }
+   
     .logo-white {
      color: var(--white-2);
  }
  .adress-ul {
      list-style: none;
+    
  }
+
     .siti {
         /* display: inline-block; */
      
@@ -483,11 +494,10 @@
         color: var(--white-2);
         font-style: normal;
        
-        font-weight: 400;
         font-family: Roboto,sans-serif;
         font-size: 14px;
         line-height: 1.71;
  
         letter-spacing: 0.03em
     }
- 
+  
