--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,13 @@
      
  
       }
+      .head-hero {
+          height: 80px;
+      }
+      .div-head {
+          margin-top: 25px;
+          margin-bottom: 24px;
+      }
       .logo {
          text-decoration: none;
          font-family: Raleway,sans-serif;
@@ -98,6 +105,7 @@
          width: calc((100% - 30px * 2) / 3);
          margin-right: 30px;
          margin-bottom: 30px;
+         border: 1px solid #EEEEEE;
          
       }
       .flex-element:nth-child(3n) {
@@ -106,8 +114,20 @@
       .flex-element:nth-last-child(-n+3) {
           margin-bottom: 0;
       }
- 
-     
+      .title-portgolio {
+          padding-left: 24px;
+      }
+     .h-portfolio {
+        width: 322px;
+        padding-left: 24px;
+        padding-top: 20px;
+        font-family: Roboto,sans-serif;
+        font-weight: 700;;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+        color: var(--black);
+     }
      
       
       .link-tel {
@@ -125,6 +145,7 @@
       .link-mail {
          text-decoration: none;
         
+         
          font-weight: 500;
          font-size: 14px;
          line-height: 16px;
@@ -141,12 +162,13 @@
           padding-top: 32px;
           padding-bottom: 11px;
          
-        
+        font-family: Roboto,sans-serif;
          font-style: 400;
          font-weight: 700;
          font-size: 14px;
          line-height: 16px;
          color: var(--black);
+         text-transform: uppercase;
       }
       .link-active:hover{
           color: var(--active);
@@ -161,10 +183,9 @@
       }
  
       .section-service {
-         width: 1210px;
+         width: 100%;
          height: 600px;
-         margin-right: auto;
-         margin-left: auto;
+       
           text-align: center;
          background: var(--secondary-bg-color);
       }
@@ -178,11 +199,14 @@
           margin-top: 0;
           margin-bottom: 40px;
           width: 696px;
-       
-         font-weight: 700;
+
+        font-family: Roboto,sans-serif;
+         font-weight: 900;
          font-size: 44px;
-         line-height: 1.3;        
+         line-height: 1.3;
+         letter-spacing: 0.06em;        
          color: var(--white-2);
+         text-transform: uppercase;
       }
       .link-active-styles {
        
@@ -257,8 +281,7 @@
       .feature-list .link-title {
          width: 270px;
          height: 75px;
-         left: 215px;
-         top: 800px;
+        
          padding-top: 10px;
          
       }
@@ -312,9 +335,8 @@
        }
       .link-title {
          
-          width: 100%;
-          height: 19px;
-        
+          
+         font-family: Roboto,sans-serif;
          font-weight: 400;
          font-size: 14px;
          line-height: 1.7;
@@ -376,6 +398,7 @@
       .iteam {
           padding-top: 50px;
           padding-bottom: 94px;
+         
       }
      .link-title-desinger {
         
@@ -476,9 +499,12 @@
         background-color:  #F5F4FA;
     }
     .footer-contentc {
+        height: 252px;
         background-color: var(--secondary-bg-color)
     }
-   
+    .fot-div {
+        padding-top: 60px;
+    }
     .logo-white {
      color: var(--white-2);
  }
@@ -500,4 +526,11 @@
  
         letter-spacing: 0.03em
     }
-  
+   
+    .logo-white {
+       padding-top: 60px;
+    }
+  .way {
+      margin-top: 9px;
+      margin-bottom: 9px;
+   }
