--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+html {
+    box-sizing: border-box;
+}
 :root {
     --black:  #212121;
     --active: #2196F3;
@@ -8,6 +11,12 @@
     --secondary-bg-color:  #2F303A;
     --mainer-bg-color: #E5E5E5;
  }
+ .link {
+     margin: 0;
+ }
+ .link-title {
+    margin: 0;
+}
  ul {
      padding-left: 0;
  } 
@@ -23,9 +32,9 @@
           background-color: var(--white-2)
       } 
       .container {
-         width: 1210px;
-         padding-left: 20px;
-         padding-right: 20px;
+         width: 1200px;
+         padding-left: 15px;
+         padding-right: 15px;
          margin-right: auto;
          margin-left: auto;
      
@@ -34,11 +43,11 @@
       .head-hero {
           height: 80px;
       }
-      .div-head {
-          margin-top: 25px;
-          margin-bottom: 24px;
-      }
-      .logo {
+    
+      .logo-head {
+          display: inline-flex;
+          padding-top: 24px;
+          padding-bottom: 24px;
          text-decoration: none;
          font-family: Raleway,sans-serif;
         
@@ -48,6 +57,9 @@
          color: var(--active);
      }
      .logotip {
+        display: inline-flex;
+      
+
          text-decoration: none;
          font-family: Raleway,sans-serif;
         
@@ -60,11 +72,9 @@
       .main-div { 
           display: flex;
           align-items: center;
+          height: 80px;
       }
-      .nav-header {
-          align-items: center;
-          display: flex;
-      }
+      
       .section-auth {
          list-style-type: none;
           margin-top: 100px;
@@ -79,7 +89,9 @@
       .site-nav { 
          list-style-type: none;
           margin-left: 93px;
-         display: flex;
+         display: inline-flex;
+         padding-top: 32px;
+         padding-bottom: 32px;
       }
       .site-nav .iteam-header:not(:last-child) {
          list-style-type: none;
@@ -183,22 +195,23 @@
       }
  
       .section-service {
-         width: 100%;
-         height: 600px;
-       
-          text-align: center;
+        margin-left: auto; 
+     margin-right: auto; 
+    padding-top: 200px;
+    text-align: center;
+    max-width: 1600px;
+    height: 600px;
          background: var(--secondary-bg-color);
       }
-      .section-biss {
-          padding-top: 30px;
-      }
+      
+     .hero-title {
+        margin-top: 0;
+        margin-bottom: 0;
+     }
+
       h1 {
-          padding-top: 200px;
-         text-align: center;
-         display: inline-block;
-          margin-top: 0;
-          margin-bottom: 40px;
-          width: 696px;
+        
+          text-align: center;
 
         font-family: Roboto,sans-serif;
          font-weight: 900;
@@ -207,6 +220,28 @@
          letter-spacing: 0.06em;        
          color: var(--white-2);
          text-transform: uppercase;
+      } 
+      .link-active-service { 
+
+        display: inline-block;
+        border-radius: 4px;
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-top: 30px;
+        border-style: none;
+        text-decoration: none;
+
+         font-weight: 700;
+         font-size: 16px;
+         line-height: 1.8;
+ 
+         background: var(--active);
+         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+         border-radius: 4px;
+         color: var(--white-2);
+ 
       }
       .link-active-styles {
        
@@ -231,30 +266,12 @@
          color: var(--black);
       }
       
-      .link-active-service { 
-          display: inline-block;        
-          padding: 10px 32px;
-          text-decoration: none;
-          border: 1px solid transparent;
-          min-width: 136px;
-          width: 200px;
- 
-        
-         font-weight: 700;
-         font-size: 16px;
-         line-height: 1.8;
- 
-         background: var(--active);
-         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-         border-radius: 4px;
-         color: var(--white-2);
- 
-      }
+     
  
       
       .feature-list {
-         display: flex;
-          flex-wrap: wrap;
+         display: inline-flex;
+         flex-wrap: wrap;
          list-style-type: none;
       }
       .feature-list .iteam {
@@ -267,10 +284,7 @@
       
       .feature-list .link-title {
          width: 270px;
-         height: 75px;
-        
-         padding-top: 10px;
-         
+         height: 75px;       
       }
  
       
@@ -322,7 +336,7 @@
        }
       .link-title {
          
-          
+         padding-bottom: 20px; 
          font-family: Roboto,sans-serif;
          font-weight: 400;
          font-size: 14px;
@@ -514,6 +528,19 @@
         letter-spacing: 0.03em
     }
    
+    .logo {
+
+        padding-top: 24px;
+        padding-bottom: 24px;
+       text-decoration: none;
+       font-family: Raleway,sans-serif;
+      
+       font-weight: 700;
+       font-size: 26px;
+       line-height: 1.19;
+       color: var(--active);
+   }
+
     .logo-white {
        padding-top: 60px;
     }
