--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@ html {
     --mainer-bg-color: #E5E5E5;
     --fot-nv-color: rgba(255, 255, 255, 0.6);
  }
+ h2 {
+     margin: 0;
+ }
  .site-nav {
      margin: 0;
  }
@@ -58,8 +61,8 @@ html {
     
       .logo-head {
           display: inline-flex;
-          padding-top: 24px;
-          padding-bottom: 24px;
+          margin-right: 94px;
+        
          text-decoration: none;
          font-family: Raleway,sans-serif;
         
@@ -79,7 +82,7 @@ html {
          font-size: 26px;
          line-height: 1.19;
          color: var(--black);
-         margin-right: 94px;
+       
      }
       
       .main-div { 
@@ -102,7 +105,7 @@ html {
       }
       nav {
           display: flex;
-          justify-content: start;
+         align-items: center;
       }
       .site-nav { 
          list-style-type: none;
@@ -111,7 +114,7 @@ html {
          
         
       }
-      .site-nav .iteam-header {
+      .site-nav .link-active-styles {
           padding: 32px 0;
           margin-right: 50px;
           display: block;
@@ -120,8 +123,6 @@ html {
       .site-nav .iteam-header:last-child {
          list-style-type: none;
          margin-right: 0;
-       
-       
       }
       .auth-nav {
          list-style-type: none;
@@ -129,7 +130,7 @@ html {
         
       }  
       .auth-nav .iteam-header+ .iteam-header {
-        padding-left: 50px;
+        margin-left: 50px;
         display: block;
       }
       .auth-nav .iteam-header+ .iteam-header:last-child {
@@ -199,11 +200,14 @@ html {
          color: var(--active);
        
       }
- 
+  
+       .section-title {
+           padding-top: 32px;
+       }
  
       .link {
          display: block; 
-         margin-top: 32px;
+       
          margin-bottom: 11px;
          
         font-family: Roboto,sans-serif;
